--- a/example/image_carousel.css
+++ b/example/image_carousel.css
@@ -2,7 +2,7 @@
 * @Author: Riny
 * @Date:   2016-02-10 13:09:55
 * @Last Modified by:   Rin
-* @Last Modified time: 2016-02-10 17:36:47
+* @Last Modified time: 2016-02-10 18:20:32
 */
 
 .carousel {
@@ -77,6 +77,13 @@
     margin-left: -30%;
     z-index: 3;
     text-align: center;
+    moz-user-select: -moz-none;
+    -moz-user-select: none;
+    -o-user-select:none;
+    -khtml-user-select:none;
+    -webkit-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 
 .iconsbox>span {
